--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -998,6 +998,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model_seguridad_acceso.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Presupuesto\pre_Grupo_Data.cs" />
     <Compile Include="Presupuesto\pre_rubro_Data.cs" />
     <Compile Include="pre_Grupo.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
