--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ActivoFijo\Af_Activo_fijo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_Categoria_Bus.cs" />
+    <Compile Include="ActivoFijo\Af_Activo_fijo_CtaCble_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_tipo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_CatalogoTipo_Bus.cs" />
     <Compile Include="ActivoFijo\Af_Catalogo_Bus.cs" />
