--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivoFijo\Af_Activo_fijo_Categoria_Info.cs" />
+    <Compile Include="ActivoFijo\Af_Activo_fijo_CtaCble_Info.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_Info.cs" />
     <Compile Include="ActivoFijo\Af_Activo_fijo_tipo_Info.cs" />
     <Compile Include="ActivoFijo\Af_CatalogoTipo_Info.cs" />
