--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -391,6 +391,7 @@
     <Compile Include="Areas\Inventario\Controllers\TransferenciasInventarioController.cs" />
     <Compile Include="Areas\Inventario\Controllers\UnidadDeMedidaController.cs" />
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
+    <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
     <Compile Include="Areas\Reportes\Controllers\ActivoFijoReportesController.cs" />
@@ -9401,6 +9402,9 @@
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Nuevo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Anular.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_GridViewPartial_Grupo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_CmbUsuario.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
