--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9400,8 +9400,14 @@
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Nuevo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Anular.cshtml" />
-    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF1.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ParametroAF\_CmbCuenta_Param1.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF2.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF3.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF6.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF4.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF5.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF7.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
