--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9396,16 +9396,17 @@
     <Content Include="Areas\Presupuesto\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Index.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\_GridViewPartial_Rubro.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Nuevo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\_CmbCuentaContable.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Nuevo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroPresupuesto\Anular.cshtml" />
     <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_GridViewPartial_Grupo.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_CmbUsuario.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_CmbUsuario_Grupo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\Index.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\TipoAF\_CmbCuenta_TipoAF.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ParametroAF\_CmbCuenta_Param1.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\Nuevo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\GrupoPresupuesto\_GridViewPartial_GrupoDet.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
