--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1003,6 +1003,7 @@
       <DependentUpon>Model_seguridad_acceso.edmx</DependentUpon>
     </Compile>
     <Compile Include="Presupuesto\pre_Grupo_Data.cs" />
+    <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Data.cs" />
     <Compile Include="Presupuesto\pre_rubro_Data.cs" />
     <Compile Include="pre_Grupo.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
