--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -376,6 +376,8 @@
     <Compile Include="RRHH\ro_horario_Bus.cs" />
     <Compile Include="RRHH\ro_horario_planificacion_Bus.cs" />
     <Compile Include="RRHH\ro_horario_planificacion_det_Bus.cs" />
+    <Compile Include="RRHH\ro_HorasProfesores_Bus.cs" />
+    <Compile Include="RRHH\ro_HorasProfesores_det_Bus.cs" />
     <Compile Include="RRHH\ro_marcaciones_tipo_Bus.cs" />
     <Compile Include="RRHH\ro_marcaciones_x_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_Nomina_Tipoliqui_Bus.cs" />
