--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -407,6 +407,8 @@
     <Compile Include="RRHH\ro_horario_Info.cs" />
     <Compile Include="RRHH\ro_horario_planificacion_det_Info.cs" />
     <Compile Include="RRHH\ro_horario_planificacion_Info.cs" />
+    <Compile Include="RRHH\ro_HorasProfesores_det_Info.cs" />
+    <Compile Include="RRHH\ro_HorasProfesores_Info.cs" />
     <Compile Include="RRHH\ro_marcaciones_tipo_Info.cs" />
     <Compile Include="RRHH\ro_marcaciones_x_empleado_Info.cs" />
     <Compile Include="RRHH\ro_Nomina_Tipoliqui_Info.cs" />
