--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9437,6 +9437,11 @@
     <Content Include="Areas\Presupuesto\Views\Presupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\Presupuesto\Anular.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_020.cshtml" />
+    <Content Include="Areas\RRHH\Views\ImportacionHoras\_GridViewPartial_importacion_horas.cshtml" />
+    <Content Include="Areas\RRHH\Views\ImportacionHoras\_GridViewPartial_importacion_horas_det.cshtml" />
+    <Content Include="Areas\RRHH\Views\ImportacionHoras\Anular.cshtml" />
+    <Content Include="Areas\RRHH\Views\ImportacionHoras\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\ImportacionHoras\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9517,7 +9522,6 @@
     <Folder Include="Areas\Presupuesto\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
-    <Folder Include="Areas\RRHH\Views\ImportacionHoras\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
     <Folder Include="Content\file\" />
     <Folder Include="Content\imagenes\" />
