--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1004,11 +1004,23 @@
     </Compile>
     <Compile Include="Presupuesto\pre_Grupo_Data.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Data.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_Data.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_Data.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_det_Data.cs" />
     <Compile Include="Presupuesto\pre_rubro_Data.cs" />
     <Compile Include="pre_Grupo.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
     <Compile Include="pre_Grupo_x_seg_usuario.cs">
+      <DependentUpon>Model_presupuesto.tt</DependentUpon>
+    </Compile>
+    <Compile Include="pre_Presupuesto.cs">
+      <DependentUpon>Model_presupuesto.tt</DependentUpon>
+    </Compile>
+    <Compile Include="pre_Presupuesto_x_grupo.cs">
+      <DependentUpon>Model_presupuesto.tt</DependentUpon>
+    </Compile>
+    <Compile Include="pre_Presupuesto_x_grupo_det.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
     <Compile Include="pre_rubro.cs">
