--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -264,6 +264,9 @@
     <Compile Include="Inventario\in_UnidadMedida_Info.cs" />
     <Compile Include="Presupuesto\pre_Grupo_Info.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Info.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_Info.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_Info.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_det_Info.cs" />
     <Compile Include="Presupuesto\pre_rubro_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
