--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -236,6 +236,9 @@
     <Compile Include="Inventario\in_UnidadMedida_Equiv_conversion_Bus.cs" />
     <Compile Include="Presupuesto\pre_Grupo_Bus.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Bus.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_Bus.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_Bus.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_x_grupo_det_Bus.cs" />
     <Compile Include="Presupuesto\pre_rubro_Bus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Bus.cs" />
