--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -392,9 +392,9 @@
     <Compile Include="Areas\Inventario\Controllers\UnidadDeMedidaController.cs" />
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
-    <Compile Include="Areas\Presupuesto\Controllers\PresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
+    <Compile Include="Areas\Produccion\ProduccionAreaRegistration.cs" />
     <Compile Include="Areas\Reportes\Controllers\ActivoFijoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\BancoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\CajaReportesController.cs" />
@@ -9430,18 +9430,13 @@
     <Content Include="Areas\RRHH\Views\ArchivosActualizacionSueldo\_GridViewPartial_archivos_iess.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_CmbEmpleado_Enc_AF.cshtml" />
     <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_CmbEmpleado_Cus_AF.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\_GridViewPartial_Presupuesto.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\Index.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\_GridViewPartial_PresupuestoDet.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\Nuevo.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\Modificar.cshtml" />
-    <Content Include="Areas\Presupuesto\Views\Presupuesto\Anular.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_020.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\_GridViewPartial_importacion_horas.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\_GridViewPartial_importacion_horas_det.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Nuevo.cshtml" />
+    <Content Include="Areas\Produccion\Views\web.config" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9520,6 +9515,9 @@
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Presupuesto\Models\" />
+    <Folder Include="Areas\Produccion\Controllers\" />
+    <Folder Include="Areas\Produccion\Models\" />
+    <Folder Include="Areas\Produccion\Views\Shared\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
     <Folder Include="Areas\SeguridadAcceso\Models\" />
