--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Presupuesto\pre_Grupo_Bus.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Bus.cs" />
     <Compile Include="Presupuesto\pre_rubro_Bus.cs" />
+    <Compile Include="Produccion\pro_Fabricacion_Bus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Bus.cs" />
@@ -407,9 +408,7 @@
     <Compile Include="SeguridadAcceso\seg_usuario_Bus.cs" />
     <Compile Include="SeguridadAcceso\seg_Usuario_x_Empresa_Bus.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Produccion\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Core.Erp.Data\Core.Erp.Data.csproj">
       <Project>{a52f3b91-b460-4ffb-aa55-a667dc60db43}</Project>
