--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1041,6 +1041,7 @@
     <Compile Include="pre_RubroTipo.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
+    <Compile Include="Produccion\pro_Fabricacion_Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pro_Fabricacion.cs">
       <DependentUpon>Model_produccion.tt</DependentUpon>
@@ -2499,8 +2500,6 @@
       <Name>Core.Erp.Info</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Produccion\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
