--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Presupuesto\pre_Grupo_Info.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Info.cs" />
     <Compile Include="Presupuesto\pre_rubro_Info.cs" />
+    <Compile Include="Produccion\pro_Fabricacion_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_resumen_Info.cs" />
@@ -439,9 +440,7 @@
     <Compile Include="SeguridadAcceso\seg_usuario_Info.cs" />
     <Compile Include="SeguridadAcceso\seg_Usuario_x_Empresa_Info.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Produccion\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
