--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -393,6 +393,7 @@
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
+    <Compile Include="Areas\Presupuesto\Controllers\RubroTipoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
     <Compile Include="Areas\Produccion\ProduccionAreaRegistration.cs" />
     <Compile Include="Areas\Reportes\Controllers\ActivoFijoReportesController.cs" />
@@ -9437,6 +9438,9 @@
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\ImportacionHoras\Nuevo.cshtml" />
     <Content Include="Areas\Produccion\Views\web.config" />
+    <Content Include="Areas\Presupuesto\Views\TipoRubroPresupuesto\Index.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\TipoRubroPresupuesto\Nuevo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\TipoRubroPresupuesto\_GridViewPartial_RubroTipo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
