--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -395,6 +395,7 @@
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroTipoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
+    <Compile Include="Areas\Produccion\Controllers\FabricacionController.cs" />
     <Compile Include="Areas\Produccion\ProduccionAreaRegistration.cs" />
     <Compile Include="Areas\Reportes\Controllers\ActivoFijoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\BancoReportesController.cs" />
@@ -9443,6 +9444,10 @@
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\_GridViewPartial_RubroTipo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\Anular.cshtml" />
+    <Content Include="Areas\Produccion\Views\Fabricacion\Index.cshtml" />
+    <Content Include="Areas\Produccion\Views\Fabricacion\_GridViewPartial_fabricacion.cshtml" />
+    <Content Include="Areas\Produccion\Views\Fabricacion\Nuevo.cshtml" />
+    <Content Include="Areas\Produccion\Views\Fabricacion\Modificar.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9521,7 +9526,6 @@
     <Folder Include="Areas\Importacion\Models\" />
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Presupuesto\Models\" />
-    <Folder Include="Areas\Produccion\Controllers\" />
     <Folder Include="Areas\Produccion\Models\" />
     <Folder Include="Areas\Produccion\Views\Shared\" />
     <Folder Include="Areas\Reportes\Models\" />
