--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Inventario\in_UnidadMedida_Equiv_conversion_Bus.cs" />
     <Compile Include="Presupuesto\pre_Grupo_Bus.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Bus.cs" />
+    <Compile Include="Presupuesto\pre_Periodo_Bus.cs" />
     <Compile Include="Presupuesto\pre_RubroTipo_Bus.cs" />
     <Compile Include="Presupuesto\pre_rubro_Bus.cs" />
     <Compile Include="Produccion\pro_Fabricacion_Bus.cs" />
