--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -392,6 +392,7 @@
     <Compile Include="Areas\Inventario\Controllers\UnidadDeMedidaController.cs" />
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
+    <Compile Include="Areas\Presupuesto\Controllers\PeriodoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroTipoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
@@ -9443,6 +9444,9 @@
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\_GridViewPartial_RubroTipo.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\Modificar.cshtml" />
     <Content Include="Areas\Presupuesto\Views\RubroTipoPresupuesto\Anular.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\_GridViewPartial_Periodo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\Index.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
