--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Presupuesto\pre_Periodo_Bus.cs" />
     <Compile Include="Presupuesto\pre_RubroTipo_Bus.cs" />
     <Compile Include="Presupuesto\pre_rubro_Bus.cs" />
+    <Compile Include="Produccion\pro_FabricacionDet_Bus.cs" />
     <Compile Include="Produccion\pro_Fabricacion_Bus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Bus.cs" />
