--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1043,6 +1043,7 @@
     <Compile Include="pre_RubroTipo.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
+    <Compile Include="Produccion\pro_FabricacionDet_Data.cs" />
     <Compile Include="Produccion\pro_Fabricacion_Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pro_Fabricacion.cs">
