--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Presupuesto\pre_Periodo_Info.cs" />
     <Compile Include="Presupuesto\pre_RubroTipo_Info.cs" />
     <Compile Include="Presupuesto\pre_rubro_Info.cs" />
+    <Compile Include="Produccion\pro_FabricacionDet_Info.cs" />
     <Compile Include="Produccion\pro_Fabricacion_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_004_detalle_Info.cs" />
