--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9452,7 +9452,8 @@
     <Content Include="Areas\Produccion\Views\Fabricacion\_GridViewPartial_fabricacion.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\Nuevo.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\Modificar.cshtml" />
-
+    <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\Modificar.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
