--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1020,6 +1020,8 @@
     <Compile Include="Presupuesto\pre_Grupo_Data.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Data.cs" />
     <Compile Include="Presupuesto\pre_Periodo_Data.cs" />
+    <Compile Include="Presupuesto\pre_PresupuestoDet_Data.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_Data.cs" />
     <Compile Include="Presupuesto\pre_RubroTipo_Data.cs" />
     <Compile Include="Presupuesto\pre_rubro_Data.cs" />
     <Compile Include="pre_Grupo.cs">
