--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -265,6 +265,8 @@
     <Compile Include="Presupuesto\pre_Grupo_Info.cs" />
     <Compile Include="Presupuesto\pre_Grupo_x_seg_usuario_Info.cs" />
     <Compile Include="Presupuesto\pre_Periodo_Info.cs" />
+    <Compile Include="Presupuesto\pre_PresupuestoDet_Info.cs" />
+    <Compile Include="Presupuesto\pre_Presupuesto_Info.cs" />
     <Compile Include="Presupuesto\pre_RubroTipo_Info.cs" />
     <Compile Include="Presupuesto\pre_rubro_Info.cs" />
     <Compile Include="Produccion\pro_FabricacionDet_Info.cs" />
