--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -393,6 +393,7 @@
     <Compile Include="Areas\Inventario\InventarioAreaRegistration.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\GrupoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\PeriodoPresupuestoController.cs" />
+    <Compile Include="Areas\Presupuesto\Controllers\PresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\Controllers\RubroTipoPresupuestoController.cs" />
     <Compile Include="Areas\Presupuesto\PresupuestoAreaRegistration.cs" />
@@ -9456,7 +9457,11 @@
     <Content Include="Areas\Presupuesto\Views\PeriodoPresupuesto\Anular.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\_GridViewPartial_fabricacion_det.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\_CmbProducto_Fabricacion.cshtml" />
-
+    <Content Include="Areas\Presupuesto\Views\Presupuesto\Nuevo.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Presupuesto\Index.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Presupuesto\_GridViewPartial_PresupuestoDet.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Presupuesto\_GridViewPartial_Presupuesto.cshtml" />
+    <Content Include="Areas\Presupuesto\Views\Presupuesto\_CmbCuentaContable.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
