--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2017,6 +2017,9 @@
     <Compile Include="vwin_producto_padre_combo.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwin_Producto_para_composicion.cs">
+      <DependentUpon>Model_inventario.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwin_Producto_Stock.cs">
       <DependentUpon>Model_inventario.tt</DependentUpon>
     </Compile>
