--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2035,6 +2035,9 @@
     <Compile Include="vwpre_Presupuesto.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwpre_PresupuestoDet.cs">
+      <DependentUpon>Model_presupuesto.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwpre_Rubro.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
