--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9471,7 +9471,6 @@
     <Content Include="Areas\Presupuesto\Views\AprobacionPresupuesto\Index.cshtml" />
     <Content Include="Areas\Presupuesto\Views\AprobacionPresupuesto\Aprobar.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\_GridViewPartial_fabricacion_det_fac.cshtml" />
-
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9584,6 +9583,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
