--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -410,6 +410,7 @@
     <Compile Include="Areas\Reportes\Controllers\FacturacionReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\ImportacionReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\InventarioReportesController.cs" />
+    <Compile Include="Areas\Reportes\Controllers\PresupuestoReportesController.cs" />
     <Compile Include="Areas\Reportes\Controllers\RRHHReportesController.cs" />
     <Compile Include="Areas\Reportes\ReportesAreaRegistration.cs" />
     <Compile Include="Areas\Reportes\Views\RRHHReportes\PivotGridExportDemoOptions.cs" />
@@ -977,6 +978,12 @@
     </Compile>
     <Compile Include="Reportes\Inventario\INV_014_Rpt.Designer.cs">
       <DependentUpon>INV_014_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Presupuesto\PRE_001_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Presupuesto\PRE_001_Rpt.Designer.cs">
+      <DependentUpon>PRE_001_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\RRHH\ROL_001_Rpt.cs">
       <SubType>Component</SubType>
@@ -9471,6 +9478,7 @@
     <Content Include="Areas\Presupuesto\Views\AprobacionPresupuesto\Index.cshtml" />
     <Content Include="Areas\Presupuesto\Views\AprobacionPresupuesto\Aprobar.cshtml" />
     <Content Include="Areas\Produccion\Views\Fabricacion\_GridViewPartial_fabricacion_det_fac.cshtml" />
+    <Content Include="Areas\Reportes\Views\PresupuestoReportes\PRE_001.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
@@ -9557,6 +9565,7 @@
     <Folder Include="Content\file\" />
     <Folder Include="Content\imagenes\" />
     <Folder Include="Content\videos\" />
+    <Folder Include="Views\PresupuestoReportes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -9583,6 +9592,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
@@ -9834,6 +9844,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Inventario\INV_014_Rpt.resx">
       <DependentUpon>INV_014_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Presupuesto\PRE_001_Rpt.resx">
+      <DependentUpon>PRE_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_001_Rpt.resx">
       <DependentUpon>ROL_001_Rpt.cs</DependentUpon>
