--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -46,7 +46,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="300" />
     </authentication>
-    <compilation debug="false" targetFramework="4.5.2">
+    <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="DevExpress.Utils.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.Data.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
