--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2048,6 +2048,9 @@
     <Compile Include="vwpre_Rubro.cs">
       <DependentUpon>Model_presupuesto.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwpro_FabricacionDet.cs">
+      <DependentUpon>Model_produccion.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwrdep_IngrEgr_x_Empleado.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
