--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9481,6 +9481,7 @@
     <Content Include="Areas\Reportes\Views\PresupuestoReportes\PRE_001.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbRubro_roles.cshtml" />
     <Content Include="Areas\Contabilidad\Views\PlanDeCuentas\Importar.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\PlanDeCuentas\_GridViewPartial_plancta_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile1.pubxml" />
